--- a/flashcards-android/package.json
+++ b/flashcards-android/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-redux": "^5.0.6",
+    "react-router-native": "^4.2.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
