--- a/flashcards-android/package.json
+++ b/flashcards-android/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.17.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-orientation": "^3.1.0",
     "react-redux": "^5.0.6",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
