--- a/flashcards-android/package.json
+++ b/flashcards-android/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.51.0",
     "react-native-navigation": "^1.1.328",
     "react-native-orientation": "^3.1.0",
+    "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
