--- a/flashcards-android/package.json
+++ b/flashcards-android/package.json
@@ -12,12 +12,13 @@
     "axios": "^0.17.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-carousel": "^0.11.0",
+    "react-native-carousel-view": "^0.5.1",
     "react-native-navigation": "^1.1.328",
     "react-native-orientation": "^3.1.0",
     "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.23",
     "react-redux": "^5.0.6",
-    "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
